Fix Some Bugs in rotate; Now shapes can not resize after rotation or if angle of the shape is not equal to 0; Upload of image works well on safari, some problem in firefox for security error, image upload to do with php without refresh the page; At the moment require the user's permission;

--- a/trunk/WebContent/CSS/main.css
+++ b/trunk/WebContent/CSS/main.css
@@ -3,6 +3,11 @@ html,body {
 	height: 100%;
 	margin: 0;
 }
+#pixWeb {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+}
 
 #tools {
 	width: 100%;
